# cf_rh320u_93_reader

./: Cargo.toml  README.md
src/: README.md  buffer.rs  lib.rs  status_code.rs
src/commands/: control_buzzer.rs  control_led.rs  device_info.rs  mod.rs  serial_number.rs  set_speed.rs
src/commands/iso15693/: inventory.rs  mod.rs  read.rs  select.rs  stay_quiet.rs  write.rs
tests/: test1.rs
