[package]
name = "cf_rh320u_93_reader"
description = "Library for using Chafon CF-RH320U-93 (ISO 15693) USB card reader"
authors = ["Michael Wright <maiklpolkovnikov@gmail.com>"]
repository = "https://github.com/michaelwright235/cf_rh320u_93_reader/"
categories = ["hardware-support"]
keywords = ["usb", "hid"]
license = "MIT"
version = "0.3.0"
edition = "2021"

[dependencies]
rusb = "0.9.1"
